Series of changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <!-- --------------------- -->
 
     <div class="marquee">
-      <p><strong class="news">Latest News</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi aliquid unde natus distinctio magnam, ipsa quidem quis numquam. Id magni non libero voluptatibus <strong class="news">Latest News</strong>doloribus quasi, ut suscipit, debitis distinctio soluta voluptates necessitatibus deserunt asperiores ex! Nostrum, impedit blanditiis, esse dolor, praesentium in, aliquid cum <strong class="news">Latest News</strong>cupiditate culpa molestias qui delectus velit.<strong class="news">Latest News</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi aliquid unde natus distinctio magnam, ipsa quidem quis numquam. Id magni non libero voluptatibus <strong class="news">Latest News</strong>doloribus quasi, ut suscipit, debitis distinctio soluta voluptates necessitatibus deserunt asperiores ex! Nostrum, impedit blanditiis, esse dolor, praesentium in, aliquid cum <strong class="news">Latest News</strong>cupiditate culpa molestias qui delectus velit.</p>
+      <p><strong class="news">Latest News</strong> Black Lives Matter.              We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. <strong class="news">Latest News</strong> Newcastle United struggled past Newport County. Hapless performance from a hapless team. </p>
     </div>
 
 
