--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,14 +29,17 @@
             </div>
           </li>
           <li class="nav-link" style="--i: .9s">
-            <a href="#strategy">Strategy</a>
+            <a href="#strategy">What We Do</a>
+          </li>
+          <li class="nav-link" style="--i: 2s">
+            <%= link_to 'Our Team', staff_index_path %>
           </li>
           <li class="nav-link" style="--i: 1.2s">
             <a href="#">Blog</a>
           </li>
           <li class="nav-link" style="--i: 1.6s">
             <a href="#">Map<i class="fas fa-caret-down rotate"></i></a>
-             <div class="dropdown">
+            <div class="dropdown">
               <ul>
                 <li class="arrow"></li>
                 <li class="dropdown-link">
@@ -48,15 +51,11 @@
                 <li class="dropdown-link">
                   <a href="#">Link 6</a>
                 </li>
-
               </ul>
             </div>
           </li>
-          <li class="nav-link" style="--i: 2s">
-            <%= link_to 'Team', staff_index_path %>
-          </li>
           <li class="nav-link">
-            <a href="#contacts">Contacts</a>
+            <a href="#contacts">Contact Us</a>
           </li>
         </ul>
       </div>
