--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .nav-logo {
-  height: 3rem;
-  width: 150px;
+  height: 56px;
+  width: 156px;
 }
 header {
   position: sticky;
@@ -14,7 +14,7 @@ header {
 }
 
 .nav-conatiner {
-  max-width: 65rem;
+  max-width: 75rem;
   padding: 0 2rem;
   background-color: $main-color;
   margin: 0 auto;
@@ -27,7 +27,7 @@ header {
   align-items: center;
 }
 .nav-btn {
-  flex: 3;
+  flex: 4;
   display: flex;
 }
 
