--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,7 +17,7 @@ html,body
 .marquee {
     width: 100%;
     line-height: 40px;
-    background-color: rgb(252,234,0);
+    background-color: #cfbbce;
     color: black;
     white-space: nowrap;
     overflow: hidden;
@@ -29,7 +29,7 @@ html,body
     font-size: 20px;
     display: inline-block;
     padding-left: 100%;
-    animation: marquee 65s linear infinite;
+    animation: marquee 35s linear infinite;
 }
 @keyframes marquee {
     0%   { transform: translate(0, 0); }
