--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,44 @@
-// Import page-specific CSS files here.
-@import "home";
+.team-image {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+  transform: scale(1);
+    &:hover {
+      transform: scale(1.1);
+   }
+}
+.team-box {
+  width: 300px;
+  height: 300px;
+  margin: 10px auto;
+  overflow: hidden;
+  background-size: auto;
+  background-position: center;
+  position: relative;
+  display: inline-block;
+}
+.team-name {
+  background: rgba(169, 130, 15, .5);
+  width: 100%;
+  text-align: center;
+  color: $second-color;
+  position: absolute;
+  bottom: 0;
+}
+.container {
+  text-align: center;
+}
+// --------------------
+.sec-col {
+  color: $second-color;
+}
+.main-col {
+  color: $main-color;
+}
+// --------------------
+.home-link {
+  color: $main-color;
+  font-size: 24px;
+  margin: 10px 0;
+  display: block;
+}
