--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -43,8 +43,11 @@
     </ul>
     </div>
 
-    <p id='authors'>   <a href='https://www.github.com/lyubodias' target="_blank"> Lyubomir Dias • </a> <a href='https://github.com/Deepbiswas1993' target="_blank"> Deep Biswas </a> </p>
+      <p id='authors'>   <a href='https://www.github.com/lyubodias' target="_blank"> Lyubomir Dias • </a> <a href='https://github.com/Deepbiswas1993' target="_blank"> Deep Biswas </a> </p>
+      <p class="sec-col">© 2020 Bisimpact</p>
   </div>
 
   <p class="powered"><a href="https://www.db-uk.net/" target="_blank">Powered by:  <strong>db</strong> </a></p>
 </div>
+
+
