--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/5.2.1/css/font-awesome.css" rel="stylesheet">
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <%= favicon_link_tag asset_path('logo-transparent-smallest.png') %>
   </head>
 
   <body>
