fixed link_to staff memeber

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,16 @@
 <div class="my_app_container">
   <!-- ------------back to top--------- -->
   <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
-  <!-- --------------------- -->
 
-    <div class="marquee">
-      <p><strong class="news">Latest News</strong> Black Lives Matter.              We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. <strong class="news">Latest News</strong> Newcastle United struggled past Newport County. Hapless performance from a hapless team. </p>
+  <!-- ------- scrolling text----------------- -->
+  <div class="text-wrap">
+    <div class="latest-news">
+      <p class="news">Latest News</p>
     </div>
-
+    <div class="marquee">
+      <p> Black Lives Matter.We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. Newcastle United struggled past Newport County. Hapless performance from a hapless team. </p>
+    </div>
+  </div>
 
   <!-- ----------------banner --------->
   <div class="banner">
