--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -2,8 +2,8 @@
   <br>
   <br>
   <div class="staff-card">
-    <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512" %>
-    <div class="staff-name">
+    <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "staff-image" %>
+    <div class="staff-name ">
       <h2 class="main-col"> <%= @staff.f_name %> <%= @staff.l_name %></h2>
       <p class="main-col"> <%= @staff.job_title %></p>
     </div>
