--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,39 +1,50 @@
 html,body
 {
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 // --------------scrolling text-----------------
+.text-wrap {
+  display: flex;
+  width: 100%;
+}
+.latest-news {
+  width: 10rem;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+}
 .news {
   background-color: black;
   color: white;
-  line-height: 40px;
-  font-size: 20px;
-  padding: 10px;
+  line-height: 42px;
+  // font-size: 20px;
 }
 .marquee {
-    width: 100%;
-    line-height: 40px;
-    background-color: #cfbbce;
-    color: black;
-    white-space: nowrap;
-    overflow: hidden;
-    box-sizing: border-box;
-    position: absolute;
+  width: calc(100% - 10rem);
+  line-height: 40px;
+  background-color: rgba(169, 130, 15, .8);
+  color: white;
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+  position: absolute;
+  right: 0;
 }
 .marquee p {
-    margin: auto 0;
-    font-size: 20px;
-    display: inline-block;
-    padding-left: 100%;
-    animation: marquee 35s linear infinite;
+  margin: auto 0;
+  font-size: 20px;
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 35s linear infinite;
 }
 @keyframes marquee {
-    0%   { transform: translate(0, 0); }
-    100% { transform: translate(-100%, 0); }
+  0%   { transform: translate(0, 0); }
+  100% { transform: translate(-100%, 0); }
 }
 // --------------------------------------------
 #myVideo {
@@ -239,6 +250,12 @@ right: 20px;
     display: block;
     padding: 20px;
     text-align: center;
+  }
+  .latest-news {
+    width: 7rem;
+  }
+  .marquee {
+    width: calc(100% - 7rem);
   }
 }
 
