--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,7 @@
   height: 100%;
   transition: all 0.5s ease-in-out;
   transform: scale(1);
+  border-radius: 5px;
     &:hover {
       transform: scale(1.1);
    }
