--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,5 +1,6 @@
 .staff-card {
   display: flex;
+  flex-direction: row;
 }
 .staff-info {
   display: flex;
@@ -9,9 +10,13 @@
   width: 90%;
 }
 .staff-name {
+  margin-top: 16px;
   text-align: center;
   width: 100%;
-  padding-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
     h2 {
       font-size: 42px;
     }
@@ -26,3 +31,51 @@
   padding: 30px;
   width: 100%;
 }
+.staff-image {
+  width: 100%;
+  border-radius: 5px;
+}
+@media only screen and (max-width: 600px) {
+  .staff-card {
+    flex-direction: column;
+  }
+  .staff-info {
+    flex-direction: column;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+  .staff-card {
+    flex-direction: column;
+  }
+   .staff-info {
+    flex-direction: column;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+  .staff-card {
+    flex-direction: column;
+  }
+  .staff-image {
+    width: 60%;
+    margin: 0 auto;
+  }
+   .staff-info {
+    flex-direction: column;
+  }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+  .staff-card {
+    flex-direction: column;
+  }
+  .staff-image {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+// -----------------------------------------------------------------
+
