working 6th link

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -54,7 +54,7 @@
               </ul>
             </div>
           </li>
-          <li class="nav-link">
+          <li class="nav-link" style="--i: 2.6s">
             <a href="#contacts">Contact Us</a>
           </li>
         </ul>
