Changes for search engine optimisation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Biswas Social Impact Advisors</title>
+    <title>Biswas Social Impact Advisory| Social Impact Consulting| BisImpact</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
+    <meta name="description" content="Biswas Social Impact Advisory (BisImpact) is a social impact advisory firm. By leveraging our expertise in economics and management consulting services, we advise organizations on how best to make a globally positive impact">
 
     <!-- Facebook Open Graph data -->
-    <meta property="og:title" content="<%= meta_title %>" />
+    <meta property="og:title" content="Biswas Social Impact Advisory (BisImpact) - " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
     <meta property="og:image" content="<%= meta_image %>" />
