--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
   <!-- ---------------------------- -->
 
   <div class="text-big" data-aos="fade-right">
-    <h2>We believe private equity is about people, not transactions.</h2>
+    <h2>We are a group of analytically minded individuals, who seek to provide a new perspective on how organisational value can be distributed.</h2>
   </div>
 
   <!-- ---------css grid-------------- -->
@@ -81,7 +81,8 @@
   </div>
   <!-- -----------------strategy----------- -->
   <div id="strategy" class="text-big" data-aos="fade-right">
-    <h2>Experts at supporting corporate entities and philanthropists to make a social difference</h2>
+    <h2>Known as experts at supporting corporate entities and philanthropists to make a social difference.</h2>
+    <br>
     <p>For us, growth of the bottom-line is not enough. In the 21st century, clients and consumers now expect to see their partners of choice contribute back into society. We work closely with businesses that are attuned to these ground realities and want to make a social contribution back, to do so in the most constructive way. We apply our expertise in Economics and Consultancy to help management teams identify the causes they want to support, the areas where they can create additional value and support them to really make a difference.
     We support philanthropists with their deepest passions. Having a vision is one thing, but knowing how to execute is another.</p>
   </div>
