--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,10 +50,10 @@ html,body
 #myVideo {
   position: absolute;
   right: 0;
-  bottom: 0;
-  width: 100vw;
+  top: 0;
+  width: 100%;
   z-index: -1;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
 }
 
@@ -61,7 +61,7 @@ html,body
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 84vh;
   text-align: center;
   margin: 0!important;
 }
@@ -211,11 +211,11 @@ right: 20px;
 // -------------media query breakpoints-------
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .nav-logo{
-    height: 6.7vh;
-    width: 139px;
-    float: left;
-  }
+  // .nav-logo{
+  //   height: 6.7vh;
+  //   width: 139px;
+  //   float: left;
+  // }
   .banner{
     display: flex;
     justify-content: center;
