--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -198,7 +198,8 @@ header {
   .nav-logo {
     height: 40px;
     width: 40px;
-    content: url(logo-transparent-smallest.png);
+    content: url(https://res.cloudinary.com/dhoxwyrvn/image/upload/v1601939591/logo-transparent-smallest_c0l4x5.png);
+    // content: url(logo-transparent-smallest.png);
     
     
   }
