--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,22 +1,58 @@
 .team-image {
   width: 100%;
   height: 100%;
+  border: 1px solid #e7e8f1;
   transition: all 0.5s ease-in-out;
   transform: scale(1);
   border-radius: 5px;
     &:hover {
       transform: scale(1.1);
-   }
+  }
 }
 .team-box {
-  width: 300px;
-  height: 300px;
-  margin: 10px auto;
+  --rX: 0;
+  --rY: 0;
+  --bX: 50%;
+  --bY: 80%;
+  width: 20rem;
+  height: 24rem;
+  margin: 1rem;
   overflow: hidden;
   background-size: auto;
   background-position: center;
   position: relative;
-  display: inline-block;
+  border-radius: 1.6rem;
+  display: flex;
+  align-items: flex-end;
+  transform: rotate(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
+  background: linear-gradient(rgba(255, 255, 255, 0.185), hsla(0, 0%, 100%, .1));
+  background-position: var(--bX) var(--bY);
+  background-size: 40rem auto;
+  box-shadow: 0 0 3rem .5rem rgba(0.2, 0.3, 0.4, 0.2);
+  transition: transform .6s 1s;
+}
+.team-box:before,
+.team-box:after {
+  content: "";
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #fff;
+  position: absolute;
+  z-index: 2;
+  opacity: .3;
+  transition: .3s;
+}
+.team-box:before {
+  top: 2rem;
+  right: 2rem;
+  border-bottom-width: 0;
+  border-left-width: 0;
+}
+.team-box:after {
+  bottom: 2rem;
+  left: 2rem;
+  border-top-width: 0;
+  border-right-width: 0;
 }
 .team-name {
   background: rgba(169, 130, 15, .5);
@@ -42,4 +78,25 @@
   font-size: 24px;
   margin: 10px 0;
   display: block;
+}
+
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.abc{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.wrap {
+  margin: 2rem;
+  transform-style: preserve-3d;
+  transform: perspective(100rem);
+  cursor: pointer;
 }
