--- a/app/assets/stylesheets/components/_team-card.scss
+++ b/app/assets/stylesheets/components/_team-card.scss
@@ -1,3 +1,89 @@
+.team-image {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #e7e8f1;
+  transition: all 0.5s ease-in-out;
+  transform: scale(1);
+  border-radius: 5px;
+}
+.team-box {
+  --rX: 0;
+  --rY: 0;
+  --bX: 50%;
+  --bY: 80%;
+  width: 20rem;
+  height: 24rem;
+  margin: 1rem;
+  overflow: hidden;
+  background-size: auto;
+  background-position: center;
+  position: relative;
+  border-radius: 1.6rem;
+  display: flex;
+  align-items: flex-end;
+  transform: rotate(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
+  background: linear-gradient(rgba(255, 255, 255, 0.185), hsla(0, 0%, 100%, .1));
+  background-position: var(--bX) var(--bY);
+  background-size: 40rem auto;
+  box-shadow: 0 0 3rem .5rem rgba(0.2, 0.3, 0.4, 0.2);
+  transition: transform .6s 1s;
+}
+
+.team-box:hover{
+  transition: all 0.4s ease-in-out;
+  transition-delay: 0.4s;
+  transform: scale(1.07);
+}
+
+.team-box:before,
+.team-box:after {
+  content: "";
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #fff;
+  position: absolute;
+  z-index: 2;
+  opacity: .3;
+  transition: .3s;
+}
+.team-box:before {
+  top: 2rem;
+  right: 2rem;
+  border-bottom-width: 0;
+  border-left-width: 0;
+}
+.team-box:after {
+  bottom: 2rem;
+  left: 2rem;
+  border-top-width: 0;
+  border-right-width: 0;
+}
+.team-name {
+  background: rgba(129, 14, 49, 0.5);
+  width: 100%;
+  text-align: center;
+  color: $second-color;
+  position: absolute;
+  bottom: 0;
+}
+.container {
+  text-align: center;
+}
+// --------------------
+.sec-col {
+  color: $second-color;
+}
+.main-col {
+  color: $main-color;
+}
+// --------------------
+.home-link {
+  color: $main-color;
+  font-size: 24px;
+  margin: 10px 0;
+  display: block;
+}
+
 *,
 *:after,
 *:before {
@@ -5,7 +91,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 
 .abc{
   display: flex;
@@ -18,65 +103,4 @@
   transform-style: preserve-3d;
   transform: perspective(100rem);
   cursor: pointer;
-}
-.chocolate {
-  --rX: 0;
-  --rY: 0;
-  --bX: 50%;
-  --bY: 80%;
-  width: 30rem;
-  height: 36rem;
-  border: 1px solid #e7e8f1;
-  border-radius: 1.6rem;
-  padding: 4rem;
-  display: flex;
-  align-items: flex-end;
-  position: relative;
-  transform: rotate(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
-  background: linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)), url("https://raw.githubusercontent.com/sabasan13/sabasan13.github.io/master/photo-1559113513-d5e09c78b9dd.jpg");
-  background-position: var(--bX) var(--bY);
-  background-size: 40rem auto;
-  box-shadow: 0 0 3rem .5rem hsla(0, 0%, 0%, .2);
-  transition: transform .6s 1s;
-}
-.chocolate:before,
-.chocolate:after {
-  content: "";
-  width: 2rem;
-  height: 2rem;
-  border: 1px solid #fff;
-  position: absolute;
-  z-index: 2;
-  opacity: .3;
-  transition: .3s;
-}
-.chocolate:before {
-  top: 2rem;
-  right: 2rem;
-  border-bottom-width: 0;
-  border-left-width: 0;
-}
-.chocolate:after {
-  bottom: 2rem;
-  left: 2rem;
-  border-top-width: 0;
-  border-right-width: 0;
-}
-.chocolate--active {
-  transition: none;
-}
-.chocolate--2 {
-  filter: hue-rotate(80deg) saturate(140%);
-}
-.chocolate--3 {
-  filter: hue-rotate(160deg) saturate(140%);
-}
-.chocolate p{
-  color: #e7e8f1;
-  font-size: 2.2rem;
-}
-.wrap:hover .chocolate:before,
-.wrap:hover .chocolate:after {
-  width: calc(100% - 4rem);
-  height: calc(100% - 4rem);
 }
