before my own changes

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -44,6 +44,13 @@
   }
 }
 
+.team-bio-header{
+  background-color: #588191;
+}
+
+.block {
+  position: relative;
+}
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 600px) {
   .staff-card {
