--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -1,13 +1,21 @@
 <div class="staff-container">
   <br>
   <br>
-  <div class="staff-card">
-    <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "staff-image" %>
-    <div class="staff-name ">
-      <h2 class="main-col"> <%= @staff.f_name %> <%= @staff.l_name %></h2>
-      <p class="main-col"> <%= @staff.job_title %></p>
+  <div class="block team-bio-header content dark">
+    <div class="row vertical-center-row">
+      <div class="medium-5 columns">
+        <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "staff-image" %>
+      </div>
+      <div class="medium-7 columns">
+        <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
+        <h5 class="main-col"> <%= @staff.job_title %></h5>
+        <h4> Something ought to fill this space, let's try it out </h4>
+      </div>
     </div>
   </div>
+
+
+  
   <div class="staff-info ">
     <div class="staff-contact">
       <strong class="main-col">Contact <%= @staff.f_name %> </strong>
