--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
 
   <div class="container" data-aos="zoom-in">
     <div class="row wrap">
-      <div class="col-lg-7 col-md-12">
+      <div class="col-lg-7 col-md-12 box-long-padding">
         <div class="grid-box-long">
           <%= image_tag "China-Agriculture.jpg", class: "grid-box-image-long" %>
           <div class="text-inner-box">
@@ -42,7 +42,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-5 col-md-9 box-tr-padding">
+      <div class="col-lg-5 col-md-12 box-tr-padding">
         <div class="box-top-right">
           <%= image_tag "Miyajima-Japan.jpg", class: "box-top-right-image" %>
           <div class="text-inner">
