--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -109,18 +109,20 @@ html,body
 .grid-box-long:hover .grid-box-image-long{
   transform: scale(1.1);
 }
+.box-long-padding{
+  padding: 0;
+}
 .box-top-right {
   background-size: cover;
   background-position: center;
   position: relative;
-  width: 110%;
+  width: 100%;
   height: 420px;
   margin-top: 20px;
   overflow: hidden;
-  padding-right: 50px;
 }
 .box-top-right-image {
-  width: 112%;
+  width: 100%;
   height: 100%;
   transition: all 0.5s ease-in-out;
   transform: scale(1);
@@ -132,6 +134,7 @@ html,body
 }
 .box-tr-padding{
   margin-bottom: 20px;
+  padding: 0;
 }
 .grid-bottom {
   background-size: cover;
