--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -7,19 +7,7 @@
   <h3 class="main-col">Our Team</h3>
   <br>
   <section class="abc">
-  <% @staff.each do |s| %>
-  <%= link_to staff_path(s) do %>
-    <div class="team-box">
-      <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "team-image" %>
-      <!--  -->
-      <div class="team-name">
-        <h2><%= s.f_name %> <%= s.l_name %></h2>
-        <p><%= s.job_title %>
-        </p>
-      </div>
-    </div>
-    <% end %>
-  <% end %>
+  <%= render 'shared/team-images'%>
   </section>
   <%= link_to 'Back', root_path, class: "home-link" %>
 
