--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row second-wrap">
       <div class="col-lg-3 col-md-12">
         <div class="grid-bottom">
           <%= cl_image_tag("joajmabi3oh9xgvp1cpc", class: "grid-bottom-image") %>
