--- a/app/views/shared/_team-images.html.erb
+++ b/app/views/shared/_team-images.html.erb
@@ -1,37 +1,13 @@
-  
+<% @staff.each do |s| %>
+  <%= link_to staff_path(s) do %>
     <div class="team-box">
       <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "team-image" %>
       <!--  -->
       <div class="team-name">
-        <h2>Deep Biswas</h2>
-        <p>King</p>
+        <h2><%= s.f_name %> <%= s.l_name %></h2>
+        <p><%= s.job_title %>
       </div>
     </div>
-
-     <div class="team-box">
-      <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "team-image" %>
-      <!--  -->
-      <div class="team-name">
-        <h2>Haseeb Zia</h2>
-        <p>Future King</p>
-      </div>
-    </div>
-
-     <div class="team-box">
-      <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "team-image" %>
-      <!--  -->
-      <div class="team-name">
-        <h2>Deep Biswas</h2>
-        <p>King</p>
-      </div>
-    </div>
-
- <div class="team-box">
-      <%= image_tag "https://ca.slack-edge.com/T02NE0241-U01687PUT3L-1bdb5f33c064-512", class: "team-image" %>
-      <!--  -->
-      <div class="team-name">
-        <h2>Deep Biswas</h2>
-        <p>King</p>
-      </div>
-    </div>
+  <% end %>
+<% end %>
 
