--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <div class="row second-wrap">
-      <div class="col-lg-3 col-md-12">
+      <div class="col-lg-3 col-md-12 grid-bottom-padding">
         <div class="grid-bottom">
           <%= cl_image_tag("joajmabi3oh9xgvp1cpc", class: "grid-bottom-image") %>
           <div class="text-inner">
@@ -61,7 +61,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6">
+      <div class="col-lg-6 col-md-6 grid-bottom-padding">
         <div class="grid-bottom">
           <%= image_tag "China-Mountains.jpg", class: "grid-bottom-image" %>
           <div class="text-inner-box3">
